# pikud-haoref-slack

./: .env.example  .gitignore  ARCHITECTURE.md  CREDITS.md  Dockerfile  LICENSE  README.md  inject_fake_alerts.py  pyproject.toml
.github/agents/: pikud-haoref-daemon.agent.md
app/: __init__.py  alert_log.py  alert_parser.py  config.py  dedupe_store.py  logging_config.py  main.py  slack_notifier.py  sse_listener.py  status_store.py  web_server.py
mcp-server/: index.js  package-lock.json  package.json
tests/: test_dedupe.py  test_parser.py  test_slack_formatting.py  test_slack_integration.py
